set party mode button to fixed on mobile

--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ h3 {
   }
 
   .louis {
+    position: fixed;
     top: auto;
     bottom: -25px;
   }
